<resources>
    <string name="app_name">MyApp</string>

    <!--tab-->
    <string name="tab_bottom_discover">发现</string>
    <string name="tab_bottom_campus">校园</string>
    <string name="tab_bottom_study">学习</string>
    <string name="tab_bottom_me">我的</string>

    <!--我的-->
    <string name="login_title">登录</string>
    <string name="btn_login">登录</string>
    <string name="input_stu_number">请输入学号</string>
    <string name="input_stu_password">请输入密码</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="save_stupassword">保存密码</string>
    <string name="btn_click_login">立即登录</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_history">观看历史</string>
    <string name="mine_contribution">消息中心</string>
    <string name="mine_cleancache">清除缓存</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_about">关于</string>
    <string name="mine_about_version">version: 1.0</string>
    <string name="mine_about_description"> 1. 校园应用app专为邑大学生打造 \n2. 含有丰富的学习资源以及即时新闻 \n3. 便捷的校园资讯，方便查询课表成绩等</string>
    <string name="mine_suggestion">意见反馈</string>
    <string name="mine_check">检查更新</string>
    <string name="mine_signup">退出账号</string>
    <string name="mine_suggest_problem">请描述您遇到的问题</string>
    <string name="mine_suggest_suggest">请给出您宝贵的建议</string>

    <string name="me_picture">相册</string>
    <string name="me_camera">相机</string>
    <string name="me_cancel">取消</string>


    <!--发现-->
    <string name="tab_select">选择栏目</string>

    <!--校园-->
    <string name="input_kd_number">请输入快递号</string>
    <string name="campus_kd">快递查询</string>
    <string name="campus_zto">中通快递</string>
    <string name="campus_yto">圆通速递</string>
    <string name="campus_yt">韵达速递</string>
    <string name="campus_yzpy">邮政快递</string>
    <string name="campus_ems">EMS</string>
    <string name="campus_jd">京东快递</string>
    <string name="campus_uc">优速快递</string>

    <string name="campus_call">点击号码可以直接拨打电话哦~</string>
    <string name="campus_call_toolbar">校内电话</string>
    <string name="campus_inform_toolbar">校内通知</string>
    <string name="inquire_grade_dialog_title">选择学年</string>
    <string name="bt_positive">查询</string>
    <string name="btn_negative">取消</string>


</resources>
