<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="5dp"
              android:gravity="center"
              android:background="@color/line_bg">
    <Button
            android:id="@+id/btn_zto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_zto"/>
    <Button
            android:id="@+id/btn_yto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_yto"/>
    <Button
            android:id="@+id/btn_yd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_yt"/>
    <Button
            android:id="@+id/btn_yzpy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_yzpy"/>
    <Button
            android:id="@+id/btn_ems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_ems"/>
    <Button
            android:id="@+id/btn_jd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_jd"/>
    <Button
            android:id="@+id/btn_uc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_uc"/>
</LinearLayout>
