<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center|top"
              android:orientation="vertical">

   <!-- <ImageView
            android:id="@+id/btn_cancel"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_action_cancel" />-->

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="128dp"
            android:text="@string/login_title"
            android:textSize="24sp" />

    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/stuNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/my_edit_text_border"
            android:hint="@string/input_stu_number"
            android:inputType="number" />

    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/stuPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/my_edit_text_border"
            android:hint="@string/input_stu_password"
            android:inputType="text" />



    <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:weightSum="1">

        <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/img_yzm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/yzm" />

        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        <EditText
                android:id="@+id/input_yzm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/my_edit_text_border"
                android:hint="@string/input_yzm"
                android:inputType="text" />
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_background">

        <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="15dp">

        <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/isCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/color_fed952" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_stupassword"/>
    </LinearLayout>

</LinearLayout>
